updated german translation
fixed string for theme light

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -39,7 +39,7 @@
     <string name="notification_time">Zeitpunkt der Benachrichtigung</string>
     <string name="dynamic_colors">Dynamische Farben</string>
     <string name="theme">Thema</string>
-    <string name="light">Übersichtlich</string>
+    <string name="light">Hell</string>
     <string name="system">System</string>
     <string name="dark">Dunkel</string>
 
